# JustHostTask

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
justhost_app/: asgi.py  settings.py  urls.py  wsgi.py
justhost_app/vps/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
justhost_app/vps/migrations/: 0001_initial.py
